maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:2: error: not found: value surBiscuit
  while(!surBiscuit()){
         ^