maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!surBiscuit()){
    if(estFaceMur()){
      gauche();
      if(estFaceMur()){
        droite();droite();
      } else {
        avance();
      }
    } else {
      avance();
    }
  }
  prendBiscuit();
}